--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -44,7 +44,7 @@
     <Compile Include="Container.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ship.cs" />
-    <Compile Include="StackOfContainer.cs" />
+    <Compile Include="Stack.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
